# PitchView

./: .gitattributes  .gitignore  README.md  build_pitchview.md  index.html  launch-demo.bat  launch-tauri.bat  package-lock.json  package.json  requirements.txt
app/frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
args/: build.dev.json
context/: requirements.md
context/benchmarks/: preprocess-runtime-baseline.json
e2e/: helpers.mjs  wdio.conf.mjs
e2e/fixtures/: stimulus-accuracy.pvabc
e2e/specs/: desktop-import.e2e.mjs  readme-screenshots.e2e.mjs  stimulus-accuracy.e2e.mjs
goals/: build_pitchview.md  manifest.md
hardprompts/: README.md
sample/: The Carpenters - Close To You (1970) (Remastered HD) [NpQRsXrduc8].webm
scripts/: benchmark-runtime.ps1  benchmark_preprocess_runtime.py  bootstrap.ps1  build.ps1  capture-readme-screenshots.ps1  check-prerequisites.ps1  common.ps1  demo.ps1  dev-loop.ps1  gui-test.ps1  run.ps1  test.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: AmplitudeStrip.tsx  LockIcon.tsx  PitchGraph.tsx  TransportPanel.tsx
src/lib/: amplitudeAnalysis.test.ts  amplitudeAnalysis.ts  data.ts  pitchAnalysis.ts  sync.ts  (+22 more)
tests/: pitch_harness.py  pitch_test_support.py  test_pitch_accuracy.py  test_preprocess_media.py
tools/: benchmark_pitch_detectors.ts  generate_stimulus_fixture.py  generate_synthetic_pitch_audio.ps1  manifest.md  preprocess_media.py  scan_display_glitches.ts  stimulus_notation.py
(+16 files in other folders)
