[package]
name = "pitchview"
version = "0.1.0"
description = "PitchView desktop shell"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "pitchview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
